--- a/src/componentes/time/time.scss
+++ b/src/componentes/time/time.scss
@@ -2,7 +2,7 @@
 .time {
 
     width: 100%;
-    height: 75vh;
+    height: 95vh;
     margin-top: 30vh;
 
 
@@ -26,10 +26,12 @@
         height: 60vh;
         margin: auto;
         margin-top: 10vh;
+        padding-top: 50px;
+        z-index: 99;
 
         .box {
             width: 270px;
-            height: 370px;
+            height: 470px;
             margin-left: 5vh;
             display: inline-block;
             background-color: rgba(20, 189, 211, 0.432);
@@ -37,23 +39,28 @@
             cursor: pointer;
 
             .imagem {
-                width: 215px;
+                width: 270px;
                 height: 277;
                 border-radius: 20px;
 
                 img {
-                    width: 100%;
-                    height: 100%;
-                    margin-left: 20px;
+                    width: 230px;
+                    margin-left: -115px;
+                    margin-top: 2vh;
+                    position: absolute;
+                    z-index: 99;
                 }
             }
             .nome {
-                width: 100%;
-                height: 210px;
-                margin-top: -10px;
+                width: 272px;
+                position: absolute;
+                height: 170px;
+                margin-top: 300px;
+                margin-left: -13.95vh;
                 background-color: white;
                 border-radius: 5px;
                 display: inline-block;
+                z-index: 99999;
 
                 h2 {
                     color: black;
@@ -75,11 +82,11 @@
             transition: .5s ease-in-out;
 
             img {
-                width: 270px;
-                margin-left: 0vh;
-                margin-top: -2vh;
-                transition: .8s;
-                z-index: 1;
+                transition: .5s ease-in-out;
+                margin-left: -130px;
+                z-index: 999;
+                margin-top: 0px;
+                width: 250px;
             }
         }
     }
