--- a/src/componentes/Nav/Navbar.modules.css
+++ b/src/componentes/Nav/Navbar.modules.css
@@ -11,10 +11,12 @@
     z-index: 99999999;
 }
 
-.Navbar .nav {
-
+.Navbar nav ul  {
+    width: 40%;
+    margin: auto ;
+    margin-top: 10px;
+    border-right: 1px solid rgba(0, 0, 0, 0.527);
 }
-
 .Navbar nav ul li {
     display: inline-block;
     margin: 1.5vw;
@@ -29,17 +31,74 @@
 .Navbar a:hover {
     border-bottom: 3px solid rgba(6, 163, 211, 0.822);
 }
-
+.Navbar .Navigation img {
+    position: absolute;
+    left: 320px;
+    top: 30px;
+    cursor: pointer;
+}
 .Navbar .MobileNavigation {
     display: none;
     height: 10px;
 }
 
-@media (max-width: 990px) {
+.btn-agendar {
+    display: flex;
+    width: 10%;
+    height: 100%;
+    right: 250px;
+    position: absolute;
+}
+.btn {
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    background-color: rgb(30, 111, 216);
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    margin-top: 2vh;
+    display: flex;
+}
+.btn a {
+    margin-top: 1.7vh;
+    margin-left: 1vh;
+    color: white;
+    text-decoration: none;
+}
 
+.btn img {
+    width: 55px;
+    margin: 0;
+}
+
+@media (max-width: 1024px) {
+    .Navbar {
+        top: 0;
+    }
+    .Navbar .Navigation img {
+        left: 50px;
+    }
+    .btn-agendar {
+        display: none;
+    }
+    .Navbar nav ul{
+        width: 50%;
+        margin-left: 350px;
+        margin-top: 30px;
+    }
+}
+@media (max-width: 990px) {
+    .Navbar {
+        height: 15vh;
+    }
     .Navbar .Navgation {
         display: none;
         visibility: hidden;
+    }
+    .Navbar nav ul{
+        border: none;
     }
     .Navbar .Navgation ul li a{
         visibility: hidden;
@@ -52,23 +111,24 @@
         height: 80vh;
         align-items: center;
     }
-
     .Navbar .MobileNavigation .Hamburguer {
 
         position: absolute;
         right: 30px;
-        top: 10px;
+        top: 30px;
         cursor: pointer;
     }
     .Navbar .NavLinks nav ul {
         height: 10vh;
     }
     .Navbar .mob {
-        height: 80vh;
+        height: 90vh;
         width: 100%;
+        top: 10vh;
         position: fixed;
         display: inline-block;
         text-align: left;
+        border-radius: 15px;
         background-color: rgba(37, 192, 231, 0.938);
     }
     .Navbar .mob li{
@@ -78,6 +138,29 @@
         margin-left: 0vh;
         font-size: 22px;
         visibility: visible;
+    }
+}
+
+@media (max-width: 768px) {
+    .Navbar {
+        height: 10vh;
+    }
+    .Navbar nav ul{
+        margin-left: 300px;
+        margin-top: 0;
+    }
+    .Navbar .MobileNavigation .Hamburguer {
+
+        top: 20px;
+    }
+
+}
+@media (max-width: 550px) {
+    .Navbar {
+        height: 10vh;
+    }
+    .Navbar nav ul{
+        margin-left: 0;
     }
 
 }
