--- a/src/componentes/Nav/Navbar.modules.css
+++ b/src/componentes/Nav/Navbar.modules.css
@@ -81,7 +81,9 @@
 
 
 @media (max-width: 1440px) {
- 
+    .Navbar {
+        height: 10vh;
+    }
     .Navbar nav {
         width: 100%;
         margin-left: 50px;
@@ -109,6 +111,7 @@
 @media (max-width: 1024px) {
     .Navbar {
         top: 0;
+        height: 14vh;
     }
     .Navbar .Navigation img {
         left: 50px;
@@ -124,6 +127,7 @@
         
     }
 }
+
 @media (max-width: 990px) {
     .Navbar {
         height: 13vh;
@@ -175,7 +179,13 @@
         visibility: visible;
     }
 }
+@media (max-width: 912px) and (max-height: 1368px ) { 
+    .Navbar {
+        height: 10vh;
+    }
 
+
+}
 @media (max-width: 768px) {
     .Navbar {
         height: 10vh;
