--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -4,18 +4,19 @@
 
     width: 100%;
     height: 100vh;
+    margin-top: 0vh;
     background-color: #f2f5fa;
 
     h2 {
 
         text-align: left;
-        margin-left: 23vh;
+        margin-left: 8%;
         font-size: 35px;
         margin-top: 10vh;
     }
 
     .container {
-        width: 80%;
+        width: 90%;
         height: 70vh;
         margin: auto;
         display: flex;
@@ -24,14 +25,14 @@
 
         .box {
             width: 25%;
-            height: 43%;
+            height: 50%;
             padding: 15px;
             background-color: rgba(255, 255, 255, 0.664);
             border: .2px solid rgba(112, 109, 109, 0.274);
             box-shadow: 0px 10px 25px rgba(55, 121, 215, 0.25);
             border-radius: 10px;
             cursor: pointer;
-            margin: auto;
+            margin: auto; margin-top: 2vh;
 
             .circle {
 
@@ -53,11 +54,12 @@
                 margin-top: 2vh;
                 margin-left: 0%;
                 text-align: center;
-                font-size: 25px;
+                font-size: 1.5em;
             }
             h3 {
                 font-weight: 200;
                 line-height: 30px;
+                font-size: 1em;
             }
         }
         .box:hover {
@@ -69,15 +71,30 @@
 
 @media (max-width: 1440px) {
     .cards {
+   
         h2 {
-            margin-left: 17vh;
+            margin-left: 8%;
         }
     
         .container {
-           
+
+            margin: auto;
             .box {
-                height: 35vh;
+                width: 25%;
+                height: 50%;
                 margin-top: 3vh;
+
+                .circle {
+                    width: 20%;
+                    height: 20%;
+                    margin: auto; margin-top: 0vh;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        margin-top: 0vh;
+                    }
+                }
             }
         
         }
@@ -86,84 +103,15 @@
 
 @media (max-width: 1024px) {
     .cards {
-        h2 {
-            margin-left: 17vh;
-        }
-    
+      
         .container {
-           
-            .box {
-                height: 40vh;
-                margin-top: 3vh;
-
-                .circle {
-                    height: 22%;
-                    width: 35%;
-                }
-            }
-        
-        }
-    }
-}
-
-@media (max-width: 912px) and (max-height: 1368px) {
-    .cards {
-        height: 150vh;
-        h2 {
-            margin-left: 10vh;
-        }
-    
-        .container {
-           
-            .box {
-                width: 44%;
-                height: 30vh;
-                margin-top: 3vh;
-
-                .circle {
-                    height: 22%;
-                    width: 35%;
-                }
-            }
-        
-        }
-    }
-}
-
-@media (max-width: 1024px) and (max-height: 600px) {
-    .cards {
-        height: auto;
-        .container {
-            height: auto;
            
             .box {
                 width: 27%;
-                height: 75vh;
                 margin-top: 3vh;
 
-                .circle {
-                    height: 22%;
-                    width: 35%;
-                }
-            }
-        
-        }
-    }
-}
-@media (max-width: 1280px) and (max-height: 800px) {
-    .cards {
-        height: auto;
-        .container {
-            height: auto;
-           
-            .box {
-                width: 27%;
-                height: 45vh;
-                margin-top: 3vh;
-
-                .circle {
-                    height: 22%;
-                    width: 35%;
+                h2 {
+                    font-size: 1em;
                 }
             }
         
@@ -173,21 +121,23 @@
 
 @media (max-width: 768px) {
     .cards {
-        height: 150vh;
-        h2 {
-            margin-left: 10vh;
-        }
-    
+      
         .container {
            
             .box {
-                width: 40%;
-                height: 40vh;
+                width: 25%;
                 margin-top: 3vh;
 
-                .circle {
-                    height: 22%;
-                    width: 35%;
+                h2 {
+                    width: 100%;
+                    margin: auto;
+                    font-size: 1.2em;
+                }
+                h3 {
+                    width: 100%;
+                    font-size: 1em;
+                    line-height: 20px;
+                    margin-top: 2vh;
                 }
             }
         
@@ -198,70 +148,29 @@
 
 @media (max-width: 550px) {
     .cards {
-        height: 290vh;
+        height: 250vh;
+
         h2 {
-            margin-left: 5vh;
+            margin-left: 15%;
         }
-    
         .container {
             display: inline-block;
             .box {
-                width: 90%;
-                height: 40vh;
+                width: 70%;
+                height: 45%;
                 margin-top: 3vh;
-
-                .circle {
-                    height: 25%;
-
-                }
 
                 h2 {
-                    margin-top: 5vh;
+                    width: 100%;
+                    margin: auto;
+                    font-size: 1.2em;
                 }
-            }
-        
-        }
-    }
-}
-@media (max-width: 400px) {
-    .cards {
-       height: auto;
-    
-        .container {
-            display: inline-block;
-            .box {
-                width: 90%;
-                height: 50vh;
-                margin-top: 3vh;
-
-                .circle {
-                    height: 20%;
-                    width: 35%;
-
+                h3 {
+                    width: 100%;
+                    font-size: 1em;
+                    line-height: 30px;
+                    margin-top: 2vh;
                 }
-                h2 {
-                    margin-top: 5vh;
-                }
-                img {
-                    margin-top: 0vh;
-                }
-
-            }
-        
-        }
-    }
-}
-@media (max-width: 300px) {
-    .cards {
-       height: auto;
-    
-        .container {
-            display: inline-block;
-            .box {
-                width: 90%;
-                height: auto;
-                margin-top: 3vh;
-
             }
         
         }
