--- a/src/componentes/clientes/clientes.scss
+++ b/src/componentes/clientes/clientes.scss
@@ -4,6 +4,7 @@
 
     width: 100%;
     height: 80vh;
+    margin-top: 20vh;
 
     h2 {
 
@@ -17,7 +18,7 @@
         width: 90%;
         height: 50vh;
         margin: auto;
-        margin-top: 5vh;
+        margin-top: 10%;
         
 
         .box {
@@ -70,20 +71,23 @@
 
     .clientes {
 
-        h2 {
-            margin-left: 8vh;
-        }
-
-
         .container {
-            width: 95%;
-            height: 50vh;
-            margin: auto;
-            margin-top: 5vh;
-            
-
+         
             .box {
-                width: 90%;
+                height: auto;
+                .text {
+
+                    margin-top: 7vh;
+                   
+                }
+                .imagem {
+                    width: 70px;
+                    height: 70px;
+                    margin-top: 5vh;
+                    margin-bottom: 2vh;
+                    margin-left: 10%;
+                }
+                
             }
         }
     }
@@ -93,13 +97,15 @@
 @media (max-width: 550px) {
 
     .clientes {
-
-
+        height: auto;
+        h2 {
+            margin-left: 20%;
+        }
 
         .container {            
-
+            height: auto;
             .box {
-                width: 90%;
+                width: 95%;
                 height: auto;
 
                 .text {
