--- a/src/componentes/folder/folder.scss
+++ b/src/componentes/folder/folder.scss
@@ -3,12 +3,13 @@
 .folder {
 
     width: 100%;
-    height: 50vh;
+    height: 40vh;
+    margin-top: 10vh;
 
     .container {
         width: 60%;
-        height: 35vh;
-        position: absolute;
+        height: 100%;
+
         margin-left: 20%;
         margin-top: 0vh;
         background-color: #007fe6;
@@ -146,7 +147,6 @@
     .folder {
 
         width: 100%;
-        height: 50vh;
 
         .container {
             width: 80%;
@@ -155,13 +155,17 @@
             display: inline-block;
 
             .col-8 {
+                width: 90%;
+                margin: auto;
 
                 .btn-secundary {
                     width: 50%;
-                    margin-left: 7vh;
+                    margin-left: 20%;
                  }
                  h2 {
-                    margin-top: 4vh;
+                    width: 80%;
+                    margin-top: 30%;
+                    font-size: 1.5em;
                 }
             }
 
@@ -191,16 +195,17 @@
             .col-8 {
 
                 h2 {
-                    margin-top: 3vh;
-                    width: 90%;
+                 margin-top: 10%;
                 }
                 h3 {
-                    width: 100%;
+                   
                 }
 
                 .btn-secundary {
-                   width: 90%;
-                   margin-left: 4vh;
+                   width: 50%;
+                   height: auto;
+                   margin: auto;
+                   font-size: .8em;
                 }
             }
         }
