--- a/src/componentes/header/header.scss
+++ b/src/componentes/header/header.scss
@@ -1,237 +1,210 @@
 
-.slider {
+:root {
+    --container-principal-background-color: #DAE9F2;
+    --titulo-span-background-color: #9cdaf1;
+    --pane-padding: 5px 42px;
+}
 
+.header {
+
+    height: 100vh;
     width: 100%;
-    height: 70vh;
-    z-index: 9;
+    z-index: 10;
 
 
     .container {
-        margin-top: 100px;
-        width: 100%;
-        height: 600px;
-        background-color: #DAE9F2;
+
+        background-color: var(--container-principal-background-color);
         display: flex;
+        height: 70vh;
+        margin-top: 4%;
         position: absolute;
+        width: 100%;
 
         .col-6 {
+
             color: black;
-            width: 50%;
             height: 100%;
             text-align: left;
+            width: 50%;
 
             .color-text {
-                background-color: #9cdaf1;
-                padding: 0px;
-                border: 10px;
-            }
 
+                background-color: var(--titulo-span-background-color) ;
+                border: 10px;
+                padding: 0px;    
+
+            }
             .btns {
 
-                width: 50%;
-                height: 10vh;
-                margin: auto;
-                margin-left: 26.5vh;
                 display: flex;
+                height: 7%;
+                margin: auto;
+                margin-left: 15%;
+                width: 50%;
 
                 .btn-intro {
-                    width: 220.6px;
-                    height: 41px;
+
+                    background: linear-gradient(225deg, #2098E3 0%, #0C63DF 100%);
+                    border: none;
+                    border-radius: 3px;
+                    color: #F2F5FA;
+                    cursor: pointer;
                     font-family: 'Inter';
                     font-style: normal;
                     font-weight: 700;
-                    font-size: 18.4504px;
+                    font-size: 1em;
+                    height: 100%;
                     line-height: 23px;
-                    /* identical to box height, or 124% */
-                    cursor: pointer;
                     margin-top: 0vh;
-                    margin-left: 2vh;
+                    margin-left: 0;
                     text-align: center;
-    
-                    /* BG */
-                    border: none;
-                    color: #F2F5FA;
-    
-                    
-                    background: linear-gradient(225deg, #2098E3 0%, #0C63DF 100%);
-                    border-radius: 3px;
+                    width: 40%;
+
                 }
                 .btn-intro-secundary {
-                    width: 220.6px;
-                    height: 41px;
-                    border: .5px solid rgba(0, 0, 0, 0.233);
+
                     background-color: transparent;
+                    border: .5px solid rgba(0, 0, 0, 0.233);
                     color: #0C63DF;
-                    font-weight: bold;
                     cursor: pointer;
+                    font-weight: bold;
                     font-weight: 600;
-                    font-size: 18.4504px;
+                    font-size: 1em;
+                    height: 100%;
                     line-height: 23px;
                     margin-left: 2vh;
+                    width: 40%;
+
                 }
-    
-
-
-            }
-
-            
+            }            
             h3 {
+
                 font-style: normal;
                 font-weight: 400;
-                font-size: 28px;
+                font-size: 2em;
                 line-height: 31px;
-                margin-left: 280px;
-                margin-top: 175px;
+                margin-left: 15%;
+                margin-top: 20%;
+
             }
             h2 {
+
+                color: rgba(2, 14, 31, 0.85);
                 font-family: 'Inter';
                 font-style: normal;
+                font-size: 3.2em;
                 font-weight: 700;
-                width: 550px;
-                margin-left: 280px;
+                line-height: 60px;
+                margin-left: 15%;
                 margin-top: 0px;
-                font-size: 44px;
-                line-height: 49px;
-                /* or 112% */
-                
-                
-                /* Tipografia/Título */
-                
-                color: rgba(2, 14, 31, 0.85);
-            }
 
+            }
             img {
-                width:100%;
-                height: 100%;
+
                 border-bottom-left-radius: 60px;
+                height: 100%;
+                width: 100%;
+
             }
         }
     }
 }
+
 
 @media (max-width: 1440px) {
 
-    .slider {
-
+    .header {
         .container {
-            margin-top: 70px;
             .col-6 {
-              
+                  
                 .btns {
-                    margin-left: 12.5vh;
+                    margin-left: 5%;
                     width: 70%;
                 }
-    
                 h3 {
-                    margin-left: 150px;
+                    font-size: 1.2em;
+                    margin-left: 5%;
                 }
                 h2 {
-                    margin-left: 150px;
-                }
-            }
-        }
-    }
-    
-}
-
-@media (max-width: 1280px) and (max-height: 800px) {
-    .slider {
-
-        .container {
-        
-            .col-6 {
-
-        
-               
-                h3 {
-
-                    margin-left: 10vh;
-                    
-                }
-                h2 {
-                    margin-left: 10vh;
-                    width: 85%;
-                }
-                .btns {
-                    margin-left: 8vh;
+                    font-size: 3.5em;
+                    margin-left: 5%;
                 }
             }
         }
     }
 }
+    
 
 @media (max-width: 1024px) {
 
-    .slider {
-        height: auto;
+    .header {
         .container {
-            margin-left: 0vh;
-            position: relative;
-            height: 70vh;
- 
+            margin-top: 7%;
             .col-6 {
-                height: 100%;
-
                 .btns {
-                    margin-left: 3vh;
-                    width: 80%;
+                    margin-left: 5%;
+                    width: 100%;
                 }
-               
                 h3 {
-                    margin-top: 15vh;
-                    margin-left: 50px;
-                    
+                    font-size: 1.2em;
+                    margin-left: 5%;
                 }
                 h2 {
-                    margin-left: 50px;
-                    width: 85%;
+                    font-size: 3.2em;
+                    margin-left: 5%;
                 }
             }
         }
     }
-    
 }
 
+
 @media (max-width: 768px) {
-    .slider {
-        width: 100%;
 
-
+    .header {
+    
         .container {
-            width: 100%;
-            display: inline-block;
-
+           height: 50vh;
             .col-6 {
-                width: 100%;
-                height: 45vh;
-                margin-bottom: 5vh;
-                margin-left: 0vh;
-                margin-top: 0vh;
-
+                .btns {
+                    font-size: .7em;
+                }
+        
                 h3 {
-                    margin-left: 5vh;
-                    margin-top: 15vh;
+                    font-size: 1.2em;
+                    margin-left: 5%;
+                    margin-top: 25%;
                 }
                 h2 {
-                    margin-left: 5vh;
+                    font-size: 2em;
+                    line-height: 40px;
+                    margin-left: 5%;
+                    width: 80%;
                 }
-               
             }
         }
     }
 }
 
 @media (max-width: 550px) {
-    .slider {
+    .header {
         width: 100%;
 
-
         .container {
-           height: auto;
-
+            height: auto;
+            width: 100%;
+            margin-top: 50px;
+            display: inline-block;
+            position: relative;
+    
             .col-6 {
-                height: 100%;
-            
+                width: 100%;
+                height: 50%;
+                margin-top: 2vh;
+                margin: auto;
+                position: relative;
+                
                 h3 {
                     margin-left: 2vh;
                     margin-top: 15vh;
@@ -239,16 +212,25 @@
                 h2 {
                     margin-left: 2vh;
                 }
-                .btns {
-                    display: inline-block;
-                    margin-left: 0vh;
-
+                 .btns {
+                    display: flex;
+                    flex-wrap: wrap;
+                    width: 70%;
+                    height: auto;
+                    margin-bottom: 4vh;
+                    
+                    .btn-intro {
+                        width: 70%;
+                    }
+    
                     .btn-intro-secundary {
+                        width: 70%;
+                        margin-left: 0vh;
                         margin-top: 2vh;
                     }
-        
                 }
             }
         }
     }
 }
+    
