--- a/src/componentes/time/time.scss
+++ b/src/componentes/time/time.scss
@@ -3,21 +3,20 @@
 
     width: 100%;
     height: 95vh;
-    margin-top: 30vh;
+    margin-top: 20vh;
 
 
     h2 {
-
         text-align: left;
-        margin-left: 320px;
-        font-size: 35px;
+        margin-left: 15%;
+        font-size: 2.2em;
         margin-top: 10vh;
     }
     h3 {
         font-weight: 200;
         width: 30%;
         text-align: left;
-        margin-left: 320px;
+        margin-left: 15%;
     }
 
 
@@ -97,6 +96,14 @@
         height: auto;
         margin-top: 40vh;
 
+        .container {
+            margin: auto;
+
+            .box {
+                margin: auto;
+            }
+        }
+
         h2 {
             margin-left: 10vh;
         }
@@ -114,12 +121,13 @@
     .time {
         height: auto;
         .container {
+            width: 100%;
             margin-bottom: 10vh;
     
             .box {
-                width: 90%;
+                width: 70%;
                 height: 370px;
-                margin-left: 5vh;
+                margin: auto;
                 display: inline-block;
                 background-color: rgba(20, 189, 211, 0.432);
                 border-radius: 20px;
@@ -129,17 +137,38 @@
                     width: 100%;
                     img {
                         position: relative;
-                        margin-top: 7vh;
-                        width: 150px;
+                        margin-top: 2vh;
+                        width: 190px;
                         margin-left: 0vh;
                     }
                 }
                 .nome {
                     margin-top: -4%;
                 }
+            }
+        
+        }
+    }
+}
 
-                
-            
+
+@media (max-width:400px) {
+    .time {
+        
+        .container {
+          
+    
+            .box {
+             
+                .imagem {
+                   
+                    img {
+                        width: 150px;
+                    }
+                }
+                .nome {
+                    margin-top: -2%;
+                }
             }
         
         }
