--- a/src/componentes/tratamentos/tratamentos.scss
+++ b/src/componentes/tratamentos/tratamentos.scss
@@ -4,7 +4,7 @@
 
     width: 100%;
     height: 70vh;
-    margin-top: 5vh;
+    margin-top: 20vh;
     
     h2 {
         text-align: left;
@@ -67,32 +67,21 @@
     }   
 }
 
-@media (max-width: 1440px) {
-    .tratamentos {
-        height: auto;
-        h2 {
-            margin-left: 20vh;
-        }
-    }
-}
 @media (max-width: 1024px) {
 
 
     .tratamentos {
         
         h2 {
-            margin-left: 15vh;
+            margin-left: 17%;
         }
     }
 }
 @media (max-width: 768px) {
     .tratamentos {
-            margin-top: 10vh;
+
             height: auto;
-        
-        h2 {
-            margin-left: 10vh;
-        }
+
         .container {
                 height: auto;
                 display: inline-block;
@@ -107,11 +96,8 @@
 @media (max-width: 550px) {
     .tratamentos {
         height: auto;
-        margin-top: 10vh;
+
         
-        h2 {
-            margin-left: 5vh;
-        }
     }
 }
 
@@ -121,4 +107,14 @@
         margin-top: 25vh;
     }
     
+}
+
+@media (max-width: 1280px) and (max-height: 800px) {
+    .tratamentos {
+        height: auto;
+
+        h2 {
+            margin-left: 15%;
+        }
+    }
 }
