--- a/src/componentes/Nav/Navbar.modules.css
+++ b/src/componentes/Nav/Navbar.modules.css
@@ -45,18 +45,17 @@
     left: 600px;
     height: 30px;
     top: 0;
-    background-color: yellow;
 }
 
 .btn-agendar {
     display: flex;
     width: 10%;
-    height: 100%;
+    height: 90%;
     right: 250px;
     position: absolute;
 }
 .btn {
-    width: 150px;
+    width: 200px;
     height: 50px;
     cursor: pointer;
     background-color: rgb(30, 111, 216);
@@ -64,19 +63,22 @@
     font-weight: bold;
     border: none;
     border-radius: 3px;
-    margin-top: 2vh;
-    display: flex;
+    margin-top: 1.5vh;
+
 }
 .btn a {
-    margin-top: 1.7vh;
-    margin-left: 1vh;
+    margin-top: 2vh;
+    margin-left: 2vh;
     color: white;
     text-decoration: none;
 }
 
 .btn img {
-    width: 55px;
+    width: 30px;
     margin: 0;
+    margin-top: -.5vh;
+    margin-left: -300px;
+
 }
 
 
@@ -109,10 +111,7 @@
   
 }
 @media (max-width: 1024px) {
-    .Navbar {
-        top: 0;
-        height: 14vh;
-    }
+
     .Navbar .Navigation img {
         left: 50px;
         margin-left: 0vh;
@@ -123,15 +122,12 @@
     .Navbar nav ul{
         width: 50%;
         margin-left: 350px;
-        margin-top: 15px;
-        
+        top: 0;
     }
 }
 
 @media (max-width: 990px) {
-    .Navbar {
-        height: 13vh;
-    }
+
     .Navbar .Navgation {
         display: none;
         visibility: hidden;
@@ -163,26 +159,25 @@
     .Navbar .mob {
         height: 90vh;
         width: 100%;
-        top: 10vh;
+        top: 9vh;
         position: fixed;
         display: inline-block;
         text-align: left;
-        border-radius: 15px;
-        background-color: rgba(37, 192, 231, 0.938);
+        border-radius: 5px;
+        background-color: rgba(171, 200, 207, 0.22);
+        backdrop-filter: blur(10px);
     }
     .Navbar .mob li{
         margin: auto;
         width: 100%;
-        margin-top: 15%;
+        margin-top: 10%;
         margin-left: 0vh;
         font-size: 22px;
         visibility: visible;
     }
 }
 @media (max-width: 912px) and (max-height: 1368px ) { 
-    .Navbar {
-        height: 10vh;
-    }
+
 
 
 }
@@ -201,6 +196,9 @@
     .Navbar .Navigation img {
         margin-top: -15px;
     }
+    .Navbar .mob {
+        top: 10vh;
+    }
 
 }
 @media (max-width: 550px) {
@@ -217,9 +215,7 @@
 
 }
 @media (max-width: 390px) {
-    .Navbar {
-        height: 12vh;
-    }
+
     .Navbar nav ul{
         margin-left: 0;
     }
