--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -3,7 +3,7 @@
 .cards {
 
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     margin-top: 0vh;
     background-color: #f2f5fa;
 
@@ -31,7 +31,6 @@
             border: .2px solid rgba(112, 109, 109, 0.274);
             box-shadow: 0px 10px 25px rgba(55, 121, 215, 0.25);
             border-radius: 10px;
-            cursor: pointer;
             margin: auto; margin-top: 2vh;
 
             .circle {
@@ -87,7 +86,8 @@
                 .circle {
                     width: 20%;
                     height: 20%;
-                    margin: auto; margin-top: 0vh;
+                    margin: auto;
+                    margin-top: 4vh;
 
                     img {
                         width: 100%;
@@ -131,6 +131,7 @@
                 h2 {
                     width: 100%;
                     margin: auto;
+                    margin-top: 1vh;
                     font-size: 1.2em;
                 }
                 h3 {
@@ -138,6 +139,16 @@
                     font-size: 1em;
                     line-height: 20px;
                     margin-top: 2vh;
+                }
+
+                .circle {
+                    margin-top: 2vh;
+                    width: 35%;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        margin-top: 0vh;
+                    }
                 }
             }
         
@@ -163,6 +174,7 @@
                 h2 {
                     width: 100%;
                     margin: auto;
+                    margin-top: 3vh;
                     font-size: 1.2em;
                 }
                 h3 {
@@ -170,6 +182,15 @@
                     font-size: 1em;
                     line-height: 30px;
                     margin-top: 2vh;
+                }
+                .circle {
+                    margin-top: 2vh;
+                    width: 25%;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        margin-top: 0vh;
+                    }
                 }
             }
         
