--- a/src/componentes/folder/folder.scss
+++ b/src/componentes/folder/folder.scss
@@ -7,24 +7,28 @@
     margin-top: 10vh;
 
     .container {
-        width: 60%;
+        width: 80%;
         height: 100%;
-
-        margin-left: 20%;
+        margin: auto;
         margin-top: 0vh;
         background-color: #007fe6;
         border-radius: 15px;
         display: flex;
 
         .col-8 {
-            width: 60%;
+            width: 50%;
             height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
 
             h2 {
                 width: 60%;
                 text-align: left;
                 margin-left: 20%;
-                margin-top: 7vh;
+                margin-top: 10vh;
                 color: white;
                 font-size: 30px;
             }
@@ -38,8 +42,8 @@
             }
 
             .btn-secundary {
-                width: 200px;
-                height: 4vh;
+                width: 250px;
+                height: 5vh;
                 border: none;
                 color: black;
                 border-radius: 5px;
@@ -54,11 +58,11 @@
                 a {
                     color: black;
                     text-decoration: none;
-                    margin-top: 1vh;
-                    margin-left: 2vh;
+                    margin-top: 1.5vh;
+                    margin-left: 3vh;
                 }
                 img {
-                    margin-top: .5vh;
+                    width: 50px;
                     margin-left: 1vh;
                 }
             }
@@ -86,17 +90,7 @@
                 }           
             }
         }
-        .col-4 {
 
-            width: 40%;
-            height: 100%;
-
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 15px;
-            }
-        }
 
     }
 }
@@ -193,6 +187,10 @@
             display: inline-block;
 
             .col-8 {
+
+                img {
+                    width: 0;
+                }
 
                 h2 {
                  margin-top: 10%;
