--- a/src/componentes/header/header.scss
+++ b/src/componentes/header/header.scss
@@ -7,9 +7,10 @@
 
 .header {
 
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     z-index: 10;
+    display: inline-block;
 
 
     .container {
@@ -32,6 +33,7 @@
 
                 background-color: var(--titulo-span-background-color) ;
                 border: 10px;
+                border-radius: 10px;
                 padding: 0px;    
 
             }
@@ -109,6 +111,26 @@
             }
         }
     }
+    .container-md {
+        width: 320px;
+        height: 12vh;
+        margin-left: -5%;
+        margin-top: 50vh;
+        position: absolute;
+            border-bottom-left-radius: 15px;
+            border-top-left-radius: 50px;
+            border-bottom-right-radius: 10px;
+        background-color: rgba(246, 251, 255, 0.444);
+        box-shadow: rgba(97, 101, 105, 0.2) 0px 8px 24px;
+        display: inline-block;
+
+        h3 {
+            color: rgb(26, 27, 29);
+            margin-left: 30px;
+            margin-top: 25px;
+        }
+       
+    }
 }
 
 
@@ -139,8 +161,10 @@
 @media (max-width: 1024px) {
 
     .header {
+        height: 70vh;
         .container {
-            margin-top: 7%;
+            margin-top: 10vh;
+            height: 55vh;
             .col-6 {
                 .btns {
                     margin-left: 5%;
@@ -156,6 +180,22 @@
                 }
             }
         }
+        .container-md {
+            width: 0px;
+            height: 0px;
+            margin-top: 0vh;
+            background-color: yellow;
+
+            h3 
+            {
+                font-size: 0px;
+                width: 0;
+                margin-left: 0;
+            }
+            h2 {
+                font-size: 0;
+            }
+        }
     }
 }
 
@@ -163,9 +203,10 @@
 @media (max-width: 768px) {
 
     .header {
-    
+        height: 50vh;
         .container {
-           height: 50vh;
+           height: 40vh;
+           margin-top: 10vh;
             .col-6 {
                 .btns {
                     font-size: .7em;
@@ -174,7 +215,7 @@
                 h3 {
                     font-size: 1.2em;
                     margin-left: 5%;
-                    margin-top: 25%;
+                    margin-top: 5vh;
                 }
                 h2 {
                     font-size: 2em;
@@ -204,10 +245,14 @@
                 margin-top: 2vh;
                 margin: auto;
                 position: relative;
+
+                img {
+                    border-radius: 5px;
+                }
                 
                 h3 {
                     margin-left: 2vh;
-                    margin-top: 15vh;
+                    margin-top: 10vh;
                 }
                 h2 {
                     margin-left: 2vh;
